@@ -6,7 +6,7 @@ so not all browsers will work for editing your wiki. Supported browsers include:
 </p>
 
 <ul>
-<li>Internet Explorer 6+</li>
+<li>Internet Explorer 7+</li>
 <li>Firefox 1.5+</li>
 <li>Chrome (beta Luminotes support)</li>
 <li>Safari 3+ (beta Luminotes support)</li>
