@@ -4,6 +4,7 @@
    note text at once.
  * Added rounded corners to several display elements.
  * Improved the layout on low-resolution displays (1024x768 and below).
+ * Dropped support for Internet Explorer version 6.0.
  * Fixed a Luminotes Desktop bug in which creating and then clicking on a new
    note link sometimes caused a red error message.
  * Fixed a bug in which yellow pulldowns that were opened towards the bottom
